--- a/darkmode/darkmode.html
+++ b/darkmode/darkmode.html
@@ -15,8 +15,9 @@
             <input id="switch" type="checkbox" name="theme">
             <label for="switch">Toggle</label>
         </div>
-
-        <p>いっそ強く深くこのまま
+        
+        <p>
+            いっそ強く深くこのまま
             <br>
             分かってる君はここには来ない
             <br>
@@ -27,8 +28,8 @@
             絶望じゃないんだと信じたい
             <br>
             遠くからでいい僕を見てよ、誰よりもきっと君を想ってる、気づいてよそれだけでいいからと言った瞬間君をもっと欲しくなる
+        </p>
     </div>
-
     <script src="dark-mode.js"></script>
 </body>
 </html>
